fix: experience modal on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,10 @@
   body {
     height: unset !important;
   }
+
+  section[id] {
+    scroll-margin-top: 6rem;
+  }
 }
 
 @utility paused {
